[package]
name = "urs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
color-eyre = "0.6.2"
env_logger = "0.10.1"
lazy_static = "1.4.0"
log = "0.4.20"
logger = "0.4.0"
rand = "0.8.5"
redis = { version = "0.24.0", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
